--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Morgan Mason's Webpage</title>
+</head>
+<body>
+    <div class="intro">
+        <img src="images/profile_pic.jpg" alt="profile_picture" height="200rem" width="auto">
+        <h1>Hi, I'm Morgan Mason A</h1>
+        <h2>I am a computer scientist at UCLA</h2>
+    </div>
+    <div class="links">
+        <h2>My social networks</h2>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/morganmason0606">LinkedIn</a></li>
+            <li><a href="https://github.com/morganmason0606">Github</a></li>
+            <li>Email me at <a href="mailto:morganmason0606@g.ucla.edu?subject=Reaching Out Through Personal Page">morganmason0606@g.ucla.edu</a></li>
+        </ul>
+    </div>
+    <div class="projects">
+        <h2>My Projects</h2>
+        <ul>
+            <li><a href="https://github.com/morganmason0606/meta-frontend-capstone">Meta Coursera Front End Capstone</a></li>
+            <li><a href="https://github.com/morganmason0606/coursera_meta_backend">Meta Coursera Back End Capstone</a></li>
+            <li><a href="https://github.com/morganmason0606/Coursera_IBM_AppliedDataScienceCapstone">IBM Coursera Applied Data Science Capstone</a></li>
+        </ul>
+    </div>
+</body>
+</html>
