better intro, should add new pages, nav bars, etc

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Morgan Mason's Webpage</title>
 </head>
 <body>
+
     <div class="intro">
-        <img src="images/profile_pic.jpg" alt="profile_picture" height="200rem" width="auto">
-        <h1>Hi, I'm Morgan Mason A</h1>
-        <h2>I am a computer scientist at UCLA</h2>
+        <div class="leftColumn">
+            <h1>Hi, I'm Morgan Mason</h1>
+            <h2>I am a computer scientist at UCLA</h2>
+            <p>I am interested in Machine Learning, Web Development, and Software Engineering. Check out my projects or get in contact with me below.</p>
+        </div>
+        <div class="rightColumn">
+            <img src="images/profile_pic.jpg" alt="profile picture" class="profile_pic" >
+        </div>
+        
     </div>
     <div class="links">
         <h2>My social networks</h2>
