new style, new pages

--- a/index.html
+++ b/index.html
@@ -7,33 +7,50 @@
     <title>Morgan Mason's Webpage</title>
 </head>
 <body>
+    <div class="icon-bar">
+        <a class="active" href="./index.html">Home</a>
+        <a href="./school.html">School Projects</a>
+        <a href="./projects.html">Personal Projects</a>
+        <a href="./jobs.html">Professional Experience</a>
+      </div>
+      
+
 
     <div class="intro">
         <div class="leftColumn">
             <h1>Hi, I'm Morgan Mason</h1>
-            <h2>I am a computer scientist at UCLA</h2>
-            <p>I am interested in Machine Learning, Web Development, and Software Engineering. Check out my projects or get in contact with me below.</p>
+            <h2>I am a Computer Science Student from UCLA</h2>
+            <p>
+                I am interested in Machine Learning, Web Development, and Software Engineering. Check out my 
+                <a href="https://github.com/morganmason0606" target="_blank">Github Page</a> 
+                or get in contact with me through 
+                <a href="https://www.linkedin.com/in/morganmason0606" target="_blank">LinkedIn</a> 
+                or email me at 
+                <a href="mailto:morganmason0606@g.ucla.edu?subject=Reaching Out Through Personal Page">morganmason0606@g.ucla.edu</a>
+
+            </p>
         </div>
         <div class="rightColumn">
             <img src="images/profile_pic.jpg" alt="profile picture" class="profile_pic" >
         </div>
-        
+<!--        
     </div>
     <div class="links">
         <h2>My social networks</h2>
         <ul>
-            <li><a href="https://www.linkedin.com/in/morganmason0606">LinkedIn</a></li>
-            <li><a href="https://github.com/morganmason0606">Github</a></li>
-            <li>Email me at <a href="mailto:morganmason0606@g.ucla.edu?subject=Reaching Out Through Personal Page">morganmason0606@g.ucla.edu</a></li>
+            <li><a href="https://www.linkedin.com/in/morganmason0606" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/morganmason0606" target="_blank">Github</a></li>
         </ul>
     </div>
     <div class="projects">
         <h2>My Projects</h2>
         <ul>
-            <li><a href="https://github.com/morganmason0606/meta-frontend-capstone">Meta Coursera Front End Capstone</a></li>
-            <li><a href="https://github.com/morganmason0606/coursera_meta_backend">Meta Coursera Back End Capstone</a></li>
-            <li><a href="https://github.com/morganmason0606/Coursera_IBM_AppliedDataScienceCapstone">IBM Coursera Applied Data Science Capstone</a></li>
+            <li><a href="https://github.com/morganmason0606/meta-frontend-capstone" target="_blank">Meta Coursera Front End Capstone</a></li>
+            <li><a href="https://github.com/morganmason0606/coursera_meta_backend" target="_blank">Meta Coursera Back End Capstone</a></li>
+            <li><a href="https://github.com/morganmason0606/Coursera_IBM_AppliedDataScienceCapstone" target="_blank">IBM Coursera Applied Data Science Capstone</a></li>
         </ul>
     </div>
+-->
+
 </body>
 </html>
