adding toolbar to new pages

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,12 @@
     <title>Personal Projects</title>
 </head>
 <body>
-    
+    <div class="icon-bar">
+        <a class="active" href="./index.html">Home</a>
+        <a href="./school.html">School Projects</a>
+        <a href="./projects.html">Personal Projects</a>
+        <a href="./jobs.html">Professional Experience</a>
+    </div>
+
 </body>
 </html>
