first stab at project cards

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://github.com/morganmason0606" target="_blank">Github Page</a> 
                 or get in contact with me through 
                 <a href="https://www.linkedin.com/in/morganmason0606" target="_blank">LinkedIn</a> 
-                or email me at 
+                or email 
                 <a href="mailto:morganmason0606@g.ucla.edu?subject=Reaching Out Through Personal Page">morganmason0606@g.ucla.edu</a>
 
             </p>
