adding projects, should add skills learned

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <p>
                 I am interested in Machine Learning, Web Development, and Software Engineering. Check out my 
                 <a href="https://github.com/morganmason0606" target="_blank">Github Page</a> 
+                and 
+                <a href="./Resume-Morgan Mason.pdf" download>my resume</a>
                 or get in contact with me through 
                 <a href="https://www.linkedin.com/in/morganmason0606" target="_blank">LinkedIn</a> 
                 or email 
