--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,30 @@
         <a href="./projects.html">Personal Projects</a>
         <a href="./jobs.html">Professional Experience</a>
     </div>
+    <h1>Personal Projects and Self Learning</h1>
+    <div class="card_list">
+        <div class="display_card">
+            <h2>Machine Learning Specialization (DeepLearning.AI, Stanford University)</h2>
+        </div>
+        <div class="display_card">
+            <h2><a href="https://github.com/morganmason0606/meta-frontend-capstone" target="_blank">Meta Front-End Developer Specialization</a></h2>
+        </div>
+        <div class="display_card">
+            <h2><a href="https://github.com/morganmason0606/coursera_meta_backend" target="_blank">Meta Back-End Developer Specialization</a></h2>
+        </div>
+        <div class="display_card">
+            <h2><a href="https://github.com/morganmason0606/coursera_meta_backend" target="_blank">Meta Back-End Developer Specialization</a></h2>
+        </div>
+        <div class="display_card">
+            <h2><a href="https://github.com/morganmason0606/agfzb-CloudAppDevelopment_Capstone" target="_blank">IBM Full Stack Software Developer Specialization</a></h2>
+        </div>
+        <div class="display_card">
+            <h2><a href="https://github.com/morganmason0606/agfzb-CloudAppDevelopment_Capstone" target="_blank">IBM Full Stack Software Developer Specialization</a></h2>
+        </div>
+        <div class="display_card">
+            <h2><a href="https://github.com/morganmason0606/Coursera_IBM_AppliedDataScienceCapstone" target="_blank">IBM Data Science Specialization</a></h2>
+        </div>
+    </div>
 
 </body>
 </html>
